--- a/src/styles/scss/style.css
+++ b/src/styles/scss/style.css
@@ -5,20 +5,21 @@
 }
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 1.2rem;
   line-height: 1.6em;
 }
+
 body header {
   background-position: center;
 }
+
 body header a {
   color: #003B46;
 }
+
 @media screen and (max-width: 375px) {
   body .menu-icon {
     display: block;
-    cursor: pointer;
     padding: 0.5rem 1rem;
   }
   body .navigation {
@@ -34,11 +35,12 @@ body header a {
   body .navigation ul li a {
     display: block;
     padding: 0.5rem 0;
+    -webkit-transition: all 0.4 linear;
     transition: all 0.4 linear;
     border-radius: 5px;
   }
   body .navigation ul li a:hover {
-    background: rgb(209, 205, 205);
+    background: #d1cdcd;
   }
   body .navigation ul.show {
     display: block;
@@ -47,7 +49,7 @@ body header a {
 
 .icono {
   z-index: 200;
-  background-color: rgb(175, 175, 175);
+  background-color: #afafaf;
 }
 
 input {
@@ -59,6 +61,7 @@ input {
   width: 100%;
   text-align: center;
 }
+
 .dropdown-menu li a:hover {
   color: #ffffff;
 }
@@ -74,10 +77,17 @@ p {
 }
 
 .logo-nav-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .logo {
@@ -94,17 +104,21 @@ p {
   padding: 0;
   list-style: none;
 }
+
 .navigation ul li {
   display: inline-block;
 }
+
 .navigation ul li a {
   display: block;
   padding: 0.5rem 1rem;
+  -webkit-transition: all 0.4 linear;
   transition: all 0.4 linear;
   border-radius: 5px;
 }
+
 .navigation ul li a:hover {
-  background: rgb(209, 205, 205);
+  background: #d1cdcd;
 }
 
 .main {
@@ -121,7 +135,31 @@ p {
 }
 
 .card-title {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+header {
+  height: 100px;
+}
+
+.container-fluid.top-0 {
+  padding: 0;
+  margin: 0 auto;
+}
+
+.carousel-inner.w-100 {
+  margin-top: -180px;
+  height: 600px;
+}
+
+.navbar-brandt {
+  margin: 0;
+  padding: 0;
+}
+
+.nav.nav-pills.mb-3.py-3.container {
+  margin: auto;
+  padding: 0;
 }
 
 /*enterizas*/
@@ -136,16 +174,26 @@ p {
 }
 
 .carousel-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .img {
   width: 150px;
   height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 /*bombachas*/
@@ -155,7 +203,7 @@ p {
 }
 
 .carousel-item {
-  margin: 200px 0px 0px 0px;
+  margin: 130px 0px 0px 0px;
 }
 
 .card {
@@ -168,27 +216,17 @@ p {
   padding-left: 80%;
 }
 
-/*talles*/
-* {
-  margin: 0;
-  padding: 0;
-}
-
-.paginas-contenido {
-  width: 100%;
-}
-
-.size-photo {
-  display: flex;
-  justify-content: center;
-}
-
 @media screen and (max-width: 375px) {
-  .paginas-contenido {
-    margin-top: 500px;
-    padding: 10px 10px;
+  .carousel-item {
+    width: 100%;
+    margin: 130px 0px 0px 0px;
   }
 }
+
+.promociones {
+  margin: 16px;
+}
+
 /*contacto*/
 * {
   margin: 0;
@@ -196,7 +234,7 @@ p {
 }
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   color: black;
   font-size: 1.2rem;
   line-height: 1.6em;
@@ -224,10 +262,17 @@ p {
 }
 
 .logo-nav-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .logo {
@@ -252,12 +297,13 @@ p {
 .navigation ul li a {
   display: block;
   padding: 0.5rem 1rem;
+  -webkit-transition: all 0.4 linear;
   transition: all 0.4 linear;
   border-radius: 5px;
 }
 
 .navigation ul li a:hover {
-  background: rgb(209, 205, 205);
+  background: #d1cdcd;
 }
 
 .main {
@@ -270,75 +316,29 @@ p {
     cursor: pointer;
     padding: 0.5rem 1rem;
   }
-
   .navigation {
     width: 100%;
     margin-top: 1rem;
   }
-
   .navigation ul {
     display: none;
   }
-
   .navigation ul.show {
     display: block;
   }
-
   .navigation ul li {
     display: block;
   }
-
   .navigation ul li a {
     display: block;
     padding: 0.5rem 0;
+    -webkit-transition: all 0.4 linear;
     transition: all 0.4 linear;
     border-radius: 5px;
   }
-
   .navigation ul li a:hover {
-    background: rgb(209, 205, 205);
+    background: #d1cdcd;
   }
-}
-@media screen and (max-width: 1000px) {
-  .sizes {
-    width: 100%;
-  }
-}
-/*header*/
-body header {
-  z-index: 100;
-  position: fixed;
-  background-color: #66A5AD;
-  color: #003B46;
-  padding: 2.5rem 0;
-  left: 0;
-  top: 0;
-  width: 100%;
-}
-
-.card-title {
-  color: #003B46;
-  display: flex;
-  justify-content: center;
-}
-
-/*footer*/
-footer #social {
-  text-align: center;
-  margin-top: -20px;
-}
-
-footer #botones {
-  margin: 5em auto 2em;
-  text-transform: uppercase;
-  color: #333;
-}
-
-footer #botones span {
-  display: block;
-  font-size: 12px;
-  margin: 15px auto 20px;
-  letter-spacing: 1.3px;
 }
 
 /*header*/
@@ -355,8 +355,12 @@ body header {
 
 .card-title {
   color: #003B46;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 /*footer*/
@@ -401,13 +405,14 @@ footer #botones img {
   footer #botones {
     margin: 4em auto 0;
   }
-
   footer #botones div {
     margin-bottom: 30px;
   }
 }
+
 /*estilo para las paginas de INFO*/
 .paginas-contenido {
+  margin: 100px 0px 0px 0px;
   font-size: 1.1rem;
   color: #333;
 }
@@ -416,4 +421,44 @@ footer #botones img {
   margin-top: 50px;
 }
 
-/*# sourceMappingURL=sty%C3%83le.css.map */
+/*header*/
+body header {
+  z-index: 100;
+  position: fixed;
+  background-color: #66A5AD;
+  color: #003B46;
+  padding: 2.5rem 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.card-title {
+  color: #003B46;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/*footer*/
+footer #social {
+  text-align: center;
+  margin-top: -20px;
+}
+
+footer #botones {
+  margin: 5em auto 2em;
+  text-transform: uppercase;
+  color: #333;
+}
+
+footer #botones span {
+  display: block;
+  font-size: 12px;
+  margin: 15px auto 20px;
+  letter-spacing: 1.3px;
+}
+/*# sourceMappingURL=style.css.map */
